# edazzip

./: Dockerfile  README.md  pyproject.toml  server.py
static/: index.html
web/: index.html  menu.json
web/css/: stylesheet.css
web/js/: popups.js  script.js
